<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/hybrid"
        android:icon="@drawable/satellite"
        android:showAsAction="always"
        android:title="@string/hybrid"/>
    <item
        android:id="@+id/normal"
        android:icon="@drawable/normal"
        android:showAsAction="never"
        android:title="@string/normal"/>
    <item
        android:id="@+id/none"
        android:icon="@drawable/none"
        android:showAsAction="never"
        android:title="@string/none"/>
    <item
        android:id="@+id/satellite"
       	android:icon="@drawable/satellite"
        android:showAsAction="never"
        android:title="@string/satellite"/>
    <item
        android:id="@+id/terrain"
        android:icon="@drawable/terrain"
        android:showAsAction="never"
        android:title="@string/terrain"/>
  <!--   
    <item 
        android:id="@+id/couleur"
        android:showAsAction="never"
        android:title="@string/couleur"
        /> -->
     
    
        <group android:checkableBehavior="single">
            <item android:id="@+id/red"
              android:title="@string/red" />
            
        	<item android:id="@+id/blue"
              android:title="@string/blue" />
    		
    		<item android:id="@+id/green"
              android:title="@string/green" />
    		
    		<item android:id="@+id/black"
              android:title="@string/black" />
    	</group>
            
      <!--   
      <item 
        android:id="@+id/trait"
        android:showAsAction="never"
        android:title="@string/trait"
        />   -->
        
        
       <group android:checkableBehavior="single">
           
           	<item android:id="@+id/petit"
              android:title="@string/petit" />
        	
        	<item android:id="@+id/moyen"
              android:title="@string/moyen" />
    		
    		<item android:id="@+id/gros"
              android:title="@string/gros" />
    		
    		<item android:id="@+id/epais"
              android:title="@string/epais" />
           
       </group> 
    
</menu>
